progress on dom

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 <body>
     
 
-    
+<div id="name-search">
+    <h1>Look up your favorite Pokemon character</h1>
+</div>
+
+<div id="search-bar">
+    <input type="text" id="pokemonName" placeholder="Tell me about..">
+    <br>
+    <button id="lookUp">search</button>
+</div>
 
     <script src="script.js"></script>
 </body>
