--- a/index.html
+++ b/index.html
@@ -6,19 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon App</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Overpass+Mono:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     
 
 <div id="name-search">
-    <h1>Look up your favorite Pokemon character</h1>
+    <h1>Look up your favorite Pokemon character below!</h1>
+    <p>instructions &#129299;
+        <br>
+            type in the name your favorite Pokemon character
+            <br>
+            the first response is your Pokemon's move
+            <br>
+            the second response is your Pokemon's ability
+    
+    </p>
 </div>
 
 <div id="search-bar">
     <input type="text" id="pokemonName" placeholder="Tell me about..">
     <br>
-    <button id="lookUp">search</button>
+    <button id="lookUp">Pokemon GO!</button>
+    <button id="clear">clear</button>
 </div>
+
+<div id="results-returned">
+</div>
+
 
     <script src="script.js"></script>
 </body>
